# soma-cli

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_brute_force_test.bat  run_demo.bat  run_soma_realworld_tests.bat
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  publish.yml
docs/: USER_GUIDE.md
scripts/: RECORD_GIF.txt  demo.sh
soma/: activity.py  cli.py  cli_helpers.py  config.py  context.py  context_git.py  context_heuristics.py  detect.py  filters.py  history.py  mcp.py  mtime.py  notes.py  runtime.py  sanitize.py  signals.py  status.py  tui.py
soma/commands/: __init__.py  agent.py  briefing.py  context_cmd.py  core.py  integrations.py  integrity_cmd.py  organise.py  power.py
tests/: README.md  conftest.py  test_agent_commands.py  test_config.py  test_context.py  test_detection.py  test_filters.py  test_fixes.py  test_history.py  test_mcp.py  test_mcp_protocol.py  test_notes.py  test_p2_4.py  test_p2_5.py  test_power_commands.py  test_sanitizer.py  test_security_redaction.py  test_signals.py  test_status.py  test_tags.py  test_tui.py
tests/fixtures/home/repo_b/: README.md
vscode-soma/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode-soma/src/: BriefingProvider.ts  extension.ts  soma.ts
