[project]
name = "soma-cli"
version = "0.1.0"
description = "Your repos already remember everything. Now they can tell your AI."
requires-python = ">=3.12"
dependencies = ["gitpython>=3.1", "typer>=0.12", "rich>=13.0", "pydantic>=2.0", "tomli-w>=1.0"]

[project.scripts]
soma = "soma.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["soma"]

[tool.pytest.ini_options]
testpaths = ["tests"]
