[project]
name = "soma-cli"
version = "0.1.0"
description = "Your repos already remember everything. Now they can tell your AI."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["git", "llm", "context", "developer-tools", "productivity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = ["gitpython>=3.1", "typer>=0.12", "rich>=13.0", "pydantic>=2.0", "tomli-w>=1.0"]

[project.scripts]
soma = "soma.cli:app"

[project.urls]
Homepage = "https://github.com/lekkalaharsha/soma-cli"
Repository = "https://github.com/lekkalaharsha/soma-cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["soma"]

[tool.pytest.ini_options]
testpaths = ["tests"]
